Fixing Java 8 only method